<resources>
    <string name="app_name">IntelliHome</string>
    <string name="hello">Hola</string>
    <string name="select_language">Seleccionar Idioma</string>
    <string name="english">Inglés</string>
    <string name="spanish">Español</string>
    <string name="Hungarian">Húngaro</string>
    <string name="Portuguese">Portugués</string>
    <string name="login1">Ingrese su Correo o Usuario</string>
    <string name="Login2">Ingrese su Contraseña</string>
    <string name="Login3">Iniciar Sesión</string>
    <string name="Login4">Autenticación fallida</string>
    <string name="Login7">He olvidado mi contraseña</string>
    <string name="o">O</string>
    <string name="Login5">Crear una nueva cuenta</string>
    <string name="login6">Inicia Sesión</string>
    <string name="res1">Crea tu cuenta</string>
    <string name="res2">Selecciona una foto de perfil</string>
    <string name="res3">Ingrese su nombre</string>
    <string name="res4">Ingrese sus apellidos</string>
    <string name="res5">Ingrese su telefono</string>
    <string name="res6">Ingrese sus hobbies</string>
    <string name="res7">Ingrese su contraseña</string>
    <string name="res8">Confirme su contraseña</string>
    <string name="res88">Email:</string>
    <string name="res9">Seleccione su tipo de casa preferida</string>
    <string name="res10">Error: URI de imagen no disponible</string>
    <string name="res11">Error al capturar la imagen</string>
    <string name="res12">Ambientalista</string>
    <string name="res13">Rustica</string>
    <string name="res14">Moderna</string>
    <string name="res15">Mansión</string>
    <string name="res16">Seleccione su tipo de usuario</string>
    <string name="res17">Arrendatario</string>
    <string name="res18">Arrendador</string>
    <string name="res19">Tomar foto</string>
    <string name="res20">Seleccionar de galería</string>
    <string name="res21">Seleccionar imagen</string>
    <string name="res22">Permiso denegado para usar la cámara</string>
    <string name="res23">Por favor, complete todos los campos.</string>
    <string name="res24">La contraseña debe tener al menos 8 caracteres, una mayúscula, un número y un carácter especial</string>
    <string name="res25">Las contraseñas no coinciden</string>
    <string name="res26">El nombre de usuario contiene palabras prohibidas</string>
    <string name="res27">Registro exitoso</string>
    <string name="res28">Número de tarjeta</string>
    <string name="res29">Titular de la tarjeta</string>
    <string name="res30">Seleccione su fecha de nacimiento</string>
    <string name="res31">DD/MM/AA</string>
    <string name="res32">Registrar</string>
    <string name="res33">Ingrese su nombre de usuario</string>
    <string name="con1">Ingrese su correo</string>
    <string name="con2">Ingrese su nueva contraseña</string>
    <string name="con3">Correo Inexistente</string>
    <string name="con4">Formato de contraseña incorrecto</string>
    <string name="con5">Confirmar</string>
    <string name="con6">Correo de confirmación enviado, puedes volver al login</string>
    <string name="con7">Reestablecer contraseña</string>

    <string name="men1">Ir a configuración</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>